Implement songQueue - enqueue and play first

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <head>
   <script src="./node_modules/react/dist/react.js"> </script>
   <script src="./node_modules/react-dom/dist/react-dom.js"> </script>
+  <script type="text/javascript" src="./node_modules/jquery/dist/jquery.min.js"></script>
+  <link href="./src/css/index.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
@@ -13,7 +15,9 @@
   <script src="./dist/src/components/library.js"></script>
   <script src="./dist/src/components/libraryEntry.js"></script>
   <script src="./dist/src/components/player.js"></script>
-
+  <script src="./dist/src/components/queue.js"></script>
+  <script src="./dist/src/components/queueEntry.js"></script>
+  <script src="./dist/src/data/data.js"></script>
   <script src="./dist/src/components/app.js"></script>
 
 </html>
